Corrected an issue with the clock and small header being and not being shifted. Enyo-DCO-1.1-Signed-off-by: Blake Stephens <blake.stephens@lge.com>

--- a/css/moonstone-light.css
+++ b/css/moonstone-light.css
@@ -1945,6 +1945,9 @@
 .moon-small-header .moon-header-title {
   line-height: normal;
 }
+.enyo-locale-non-latin .moon-small-header .moon-header-title {
+  line-height: 1.5em;
+}
 .moon-small-header .moon-header-title-wrapper {
   padding-left: 0;
   box-sizing: border-box;
